--- a/index.html
+++ b/index.html
@@ -1,138 +1,190 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Random Number Generator</title>
-  <style>
-    body {
-      font-family: monospace;
-      background: #111;
-      color: #0f0;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      margin: 0;
-      overflow: hidden;
-    }
-
-    .container {
-      background: #000;
-      padding: 30px;
-      border-radius: 10px;
-      text-align: center;
-      width: 350px;
-      box-shadow: 0 0 20px #0f0;
-    }
-
-    input, button {
-      font-family: monospace;
-      margin-bottom: 10px;
-      padding: 8px;
-      width: 100%;
-      border-radius: 5px;
-      border: 1px solid #0f0;
-      background: #111;
-      color: #0f0;
-    }
-
-    button {
-      cursor: pointer;
-      background: #e63946;
-      color: white;
-      border: none;
-    }
-
-    .result {
-      margin-top: 20px;
-      text-align: left;
-      font-size: 14px;
-      max-height: 200px;
-      overflow-y: auto;
-    }
-
-    .popup {
-      position: fixed;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      background: #e63946;
-      color: #fff;
-      padding: 20px 40px;
-      font-size: 18px;
-      border-radius: 10px;
-      display: none;
-      z-index: 999;
-      box-shadow: 0 0 20px #fff;
-    }
-  </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Random Number Generator</title>
+<style>
+  body {
+    font-family: monospace;
+    background: #111;
+    color: #0f0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
+    overflow: hidden;
+  }
+  .container {
+    background: #000;
+    padding: 30px;
+    border-radius: 10px;
+    text-align: center;
+    width: 500px;
+    max-height: 90vh;
+    overflow: hidden;
+    box-shadow: 0 0 20px #0f0;
+  }
+  input, button {
+    font-family: monospace;
+    margin-bottom: 10px;
+    padding: 8px;
+    width: 100%;
+    border-radius: 5px;
+    border: 1px solid #0f0;
+    background: #111;
+    color: #0f0;
+  }
+  button {
+    cursor: pointer;
+    background: #e63946;
+    color: white;
+    border: none;
+  }
+  .progress-bar {
+    margin-top: 15px;
+    width: 100%;
+    height: 10px;
+    background: #222;
+    border-radius: 5px;
+    overflow: hidden;
+    display: none;
+  }
+  .progress {
+    height: 100%;
+    width: 0%;
+    background: #e63946;
+    transition: width 0.2s linear;
+  }
+  .result {
+    margin-top: 20px;
+    text-align: left;
+    font-size: 14px;
+    max-height: 400px;
+    overflow-y: auto;
+  }
+  .popup {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: #e63946;
+    color: #fff;
+    padding: 20px 40px;
+    font-size: 18px;
+    border-radius: 10px;
+    display: none;
+    z-index: 999;
+    box-shadow: 0 0 20px #fff;
+  }
+</style>
 </head>
 <body>
-  <div class="container" id="container">
-    <h1>Generate Random Numbers</h1>
-    <input type="number" id="from" placeholder="From">
-    <input type="number" id="to" placeholder="To">
-    <button onclick="fakeGenerate()">Generate</button>
-    <div class="result" id="result"></div>
+<div class="container" id="container">
+  <h1>Generate Random Numbers</h1>
+  <input type="number" id="from" placeholder="From">
+  <input type="number" id="to" placeholder="To">
+  <button onclick="fakeGenerate()">Generate</button>
+  <div class="progress-bar">
+    <div class="progress" id="progress"></div>
   </div>
+  <div class="result" id="result"></div>
+</div>
 
-  <div class="popup" id="popup">⚠️ WARNING 450 Critical errors detected !</div>
+<div class="popup" id="popup">⚠️ WARNING 450 Critical errors detected !</div>
 
 <script>
-  function fakeGenerate() {
-    const container = document.getElementById("container");
-    const resultElement = document.getElementById("result");
+function fakeGenerate() {
+  const container = document.getElementById("container");
+  const resultElement = document.getElementById("result");
+  const progressBar = document.querySelector(".progress-bar");
+  const progress = document.getElementById("progress");
 
-    // Effacer tout sauf la console
-    container.querySelectorAll('input, button, h1').forEach(el => el.style.display = 'none');
-    resultElement.innerHTML = "";
+  // Reset
+  resultElement.innerHTML = "";
+  progressBar.style.display = "block";
+  progress.style.width = "0%";
 
-    // Messages d'erreur inventés
-    const messages = [
-      "Error: Failed to allocate memory at 0x0042FFAA",
-      "Warning: Unknown HTML tag detected",
-      "Fatal: Stack overflow in process #22",
-      "Error: Cannot read property 'undefined' of null",
-      "Warning: CPU temperature exceeded safe limit",
-      "Error: Disk read failure",
-      "Warning: Deprecated API call detected",
-      "Error: Unexpected token '<' in JSON",
-      "Error: Out of memory",
-      "Warning: High CPU usage detected",
-      "Error: Network timeout while connecting to 127.0.0.1",
-      "Error: Critical system file missing",
-      "Warning: Invalid pointer reference",
-      "Error: SyntaxError in line 42"
-    ];
+  // Texte animé (points et pourcentage)
+  let dots = "";
+  let dotInterval = setInterval(() => {
+    dots = dots.length < 3 ? dots + "." : "";
+    let cpuUsage = Math.floor(Math.random() * (85 - 79 + 1)) + 79;
+    resultElement.innerHTML = `Processing${dots} (using ${cpuUsage}% of CPU)`;
+  }, 500);
 
-    let index = 0;
-    const interval = setInterval(() => {
-      if(index < messages.length) {
-        resultElement.innerHTML += messages[index] + "<br>";
-        resultElement.scrollTop = resultElement.scrollHeight; // auto-scroll
-        index++;
-      } else {
-        clearInterval(interval);
-        showPopup();
-      }
-    }, 300);
+  // Progression barre
+  let width = 0;
+  let interval = setInterval(() => {
+    if(width >= 100) {
+      clearInterval(interval);
+      clearInterval(dotInterval);
+      startErrorScroll();
+    } else {
+      width += 2; // plus lent pour un effet plus long
+      progress.style.width = width + "%";
+    }
+  }, 150);
+}
+
+function startErrorScroll() {
+  const container = document.getElementById("container");
+  const resultElement = document.getElementById("result");
+
+  // Effacer les champs
+  container.querySelectorAll('input, button, h1').forEach(el => el.style.display = 'none');
+
+  // Générer 200 lignes d'erreurs fictives
+  const errorTemplates = [
+    "Error: Failed to allocate memory at 0x0042FFAA",
+    "Warning: Unknown HTML tag detected",
+    "Fatal: Stack overflow in process #22",
+    "Error: Cannot read property 'undefined' of null",
+    "Warning: CPU temperature exceeded safe limit",
+    "Error: Disk read failure",
+    "Warning: Deprecated API call detected",
+    "Error: Unexpected token '<' in JSON",
+    "Error: Out of memory",
+    "Warning: High CPU usage detected",
+    "Error: Network timeout while connecting to 127.0.0.1",
+    "Error: Critical system file missing",
+    "Warning: Invalid pointer reference",
+    "Error: SyntaxError in line 42"
+  ];
+
+  const errors = [];
+  for(let i=0; i<200; i++){
+    const msg = errorTemplates[Math.floor(Math.random()*errorTemplates.length)];
+    errors.push(msg);
   }
 
-  function showPopup() {
-    const popup = document.getElementById("popup");
-    popup.style.display = "block";
+  let index = 0;
+  const interval = setInterval(() => {
+    if(index < errors.length){
+      resultElement.innerHTML += errors[index] + "<br>";
+      resultElement.scrollTop = resultElement.scrollHeight;
+      index++;
+    } else {
+      clearInterval(interval);
+      showPopup();
+    }
+  }, 50); // vitesse de défilement
+}
 
-    setTimeout(() => {
-      // Redirection vers page 404 simulée
-      document.body.innerHTML = `
-        <div style="color:#f00; text-align:center; font-family:monospace;">
-          <h1>404 Not Found</h1>
-          <p>The page you are looking for does not exist.</p>
-        </div>`;
-      document.body.style.background = "#000";
-    }, 3000);
-  }
+function showPopup(){
+  const popup = document.getElementById("popup");
+  popup.style.display = "block";
+
+  setTimeout(()=>{
+    document.body.innerHTML = `
+      <div style="color:#f00; text-align:center; font-family:monospace;">
+        <h1>404 Not Found</h1>
+        <p>The page you are looking for does not exist.</p>
+      </div>`;
+    document.body.style.background = "#000";
+  }, 4000);
+}
 </script>
 </body>
 </html>
