--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 </head>
 <body>
 <!-- Musique en boucle -->
-<audio id="bg-music" src="let_him_cook.mp3" loop></audio>
+<audio id="bg-music" src="let_him_cook.m4a" loop></audio>
 
 <!-- Bouton mute/unmute -->
 <div id="audio-toggle">🔊</div>
